force-app/main/default/objects/Order/fields/HistoricalProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>HistoricalProcessingStatus__c</fullName>
    <label>HistoricalProcessingStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotProcessed</fullName>
                <default>true</default>
                <label>NotProcessed</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>