force-app/main/default/objects/Order/fields/IsHistorical__c.field-meta.xml
<CustomField>
    <fullName>IsHistorical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Historical</label>
    <type>Checkbox</type>
</CustomField>