force-app/main/default/objects/Order/fields/isHistoricalManaged__c.field-meta.xml
<CustomField>
    <fullName>isHistoricalManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHistoricalManaged</label>
    <type>Checkbox</type>
</CustomField>